--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,12 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "24.7.0",
     "@types/react": "19.2.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "typescript": "5.9.3"
   }
 }
